--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,5 @@
 apply plugin: 'com.android.application'
 
-repositories {
-    maven { url "/home/dennis/quadcopter/ros/rosjava/devel/share/maven" }
-    maven { url "/home/dennis/quadcopter/ros/android/devel/share/maven" }
-}
-
 android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
@@ -28,12 +23,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    packagingOptions {
-        /* https://github.com/rosjava/android_core/issues/194 */
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/NOTICE.txt'
-    }
 }
 
 tasks.withType(JavaCompile) {
@@ -50,11 +39,7 @@ task ndkBuild(type: Exec) {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
     compile 'com.android.support:appcompat-v7:22.2.1'
-
-    compile('org.ros.android_core:android_10:0.2.0'){
-        exclude group: 'junit'
-        exclude group: 'xml-apis'
-    }
-
+    compile 'com.android.support:support-v4:22.2.1'
 }
