--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="me.denniss.quadnode">
+    package="me.denniss.quadctrl">
 
     <uses-feature android:name="android.hardware.usb.host" />
 
@@ -35,9 +35,6 @@
 
         </activity>
 
-        <activity android:name="org.ros.android.MasterChooser" />
-
-        <!--<service android:name="org.ros.android.NodeMainExecutorService" />-->
     </application>
 
 </manifest>
