--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,14 @@
-*.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
-/build
-/captures
-
 *.swp
 ~*
 
 *.so
 *.o
 *.o.d
+*.a
+
+CMakeFiles
+CMakeCache.txt
+Makefile
+cmake_install.cmake
+
+bin/
