Rework some old code

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,25 +3,24 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
-
     defaultConfig {
-        applicationId "me.denniss.quadnode"
+        applicationId 'me.denniss.quadctrl'
         minSdkVersion 22
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
-
     sourceSets.main {
         jniLibs.srcDir 'src/main/libs'
         jni.srcDirs = [];
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    productFlavors {
     }
 }
 
@@ -38,8 +37,7 @@ task ndkBuild(type: Exec) {
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:support-v4:22.2.1'
 }
